# superqa-skill

./: .gitignore  README.ko.md  README.md  SKILL.md  pyproject.toml
docs/: index.html
docs/changelog/: changelog-2026-07-10.md  changelog-2026-07-11.md
examples/: example-scenario.yaml
reference/: agent-qa.md  report.md  scenario-format.md  scenario-gen.md  side-effects.md  site-rules.md  tui.md
scripts/: superqa.sh
superqa_tui/: __init__.py  admin.py  app.py  cli.py  diff.py  engine.py  i18n.py  junit.py  recorder_overlay.js  report.py  scenario.py  scheduler.py  store.py  superqa.tcss  visual.py
tests/: test_admin.py  test_engine_smoke.py  test_tui_smoke.py  test_v02_features.py  test_v03_features.py
tests/fixtures/: second.html  testsite.html
