[project]
name = "superqa"
version = "0.3.0"
description = "Browser QA for everyone: record by clicking, run, schedule, and get reports non-developers can read - in your language."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "cskwork" }]
dependencies = [
    "textual>=0.80",
    "playwright>=1.45",
    "pyyaml>=6.0",
    "pillow>=10.0",
]

[project.scripts]
superqa = "superqa_tui.cli:main"

[project.urls]
Repository = "https://github.com/cskwork/superqa-skill"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["superqa_tui"]
